--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,309 @@
+:root {
+  --bordbg: #000000;
+  --white: #ffffff;
+  --primary: #999999;
+  --sec-bg: #2E3038;
+  --btn-bg: #FBE850;
+  --size: 1rem;
+  --padSize: 20vw;
+}
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--bordbg);
+  color: var(--white);
+  font-size: 1rem;
+}
+
+p {
+  font-size: 1em;
+  line-height: 1.4;
+  color: var(--primary);
+}
+
+h3 {
+  font-family: Times New Roman;
+  font-weight: 480;
+  font-size: 1em;
+}
+
+.inTouch {
+  padding: calc(var(--size) - 0.2rem);
+  color: black;
+  background-color: var(--btn-bg);
+  border: none;
+  outline: none;
+  font-weight: 420;
+  font-family: Times New Roman;
+  letter-spacing: 1.2px;
+  ;
+}
+
+a {
+  text-decoration: none;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  padding-inline: calc(var(--size) * 1.2);
+  margin-block: calc(var(--size) * 2);
+}
+
+#navList {
+  background-image: linear-gradient(to right, var(--bordbg), var(--sec-bg));
+  color: var(--white);
+  width: 50%;
+  min-height: 150px;
+  padding: var(--size);
+  border-radius: 5px;
+  inset: 5%;
+  translate: -5% -5%;
+  
+  >ul {
+    display: grid;
+    gap: var(--size);
+    list-style: none;
+    font-family: Times New Roman;
+    font-weight: 350;
+  }
+  
+}
+
+nav ul {
+  display: none;
+  list-style: none;
+  
+  >li {
+    display: inline;
+  }
+}
+
+.touchNav {
+  display: none;
+}
+
+button[popovertarget="navList"] {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.hamburgerMenu {
+  width: 22px;
+}
+
+.mainContent {
+  padding-inline: var(--size);
+  margin-block-end: var(--size);
+}
+
+@scope(.mainContent) {
+  
+  h1 {
+    font-family: Times New Roman;
+    line-height: 1.3;
+    font-size: 7vw;
+    font-weight: 480;
+    max-width: 30ch;
+    margin-block-end: var(--size);
+  }
+  
+  p {
+    margin-block-end: var(--size);
+  }
+  
+  figure {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: calc(var(--size) * 1.5);
+    flex-basis: 22%;
+    padding: calc(var(--size) * 4) calc(var(--size) * 2);
+  }
+}
+
+.projects-done {
+  padding-inline: var(--size);
+  margin-block-end: calc(var(--size) * 5);
+  
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: calc(var(--size) * 2);
+}
+
+@scope (.projects-done) {
+  .item {
+    flex-grow: 1;
+    flex-basis: 400px;
+  }
+  
+  figure {
+    width: 100%;
+    display: grid;
+    gap: 1rem;
+    margin-block-end: var(--size);
+  }
+  
+  img {
+    width: 100%;
+  }
+  
+  a {
+    font-family: Times New Roman;
+    font-size: 1.8rem;
+    font-weight: 480;
+    color: var(--white);
+    text-decoration: none;
+  }
+  
+}
+
+.myExperience {
+  padding-inline: var(--size);
+  padding-block: calc(var(--size) * 4);
+  background-color: var(--sec-bg);
+}
+
+h2 {
+  margin-block-end: var(--size);
+  font-family: Times New Roman;
+  line-height: 1.3;
+  font-size: 7vw;
+  font-weight: 480;
+  max-width: 40ch;
+}
+
+.working-me {
+  padding-inline: var(--size);
+  padding-block: calc(var(--size) * 4);
+  
+  >p {
+    font-size: 0.9em;
+    margin-block-end: var(--size);
+  }
+  
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--size);
+  background-color: var(--sec-bg);
+}
+
+@media(min-width: 600px) and (orientation: landscape) {
+ 
+ header,
+  .mainContent,
+  .projects-done,
+  .myExperience,
+  .working-me,
+  footer {
+    padding-inline: calc(var(--padSize) - 5vw);
+  }
+  
+  h2 {
+    font-size: 5.5vw;
+  }
+}
+
+@media(min-width: 900px) {
+  
+  header,
+  .mainContent,
+  .projects-done,
+  .myExperience,
+  .working-me,
+  footer {
+    padding-inline: var(--padSize);
+  }
+  
+  header,.mainContent,
+  .projects-done,.myExperience,
+  .working-me {
+    padding-block: calc(var(--size) * 3);
+  }
+  
+  .hamburgerMenu {
+    display: none;
+  }
+  
+  .touchNav {
+    display: block;
+  }
+  
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  nav ul {
+    display: inline;
+    font-family: 'Times New Roman', Times, serif;
+    
+    >li:nth-child(odd) {
+      margin-right: calc(var(--size) * 1.5);
+    }
+  }
+  
+  @scope(.mainContent) {
+    h1 {
+      line-height: 1.3;
+      font-size: 2.8rem;
+      font-weight: 480;
+      max-width: 30ch;
+      text-wrap: balance;
+    }
+    
+    p {
+      width: 50%;
+    }
+    
+    figure {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+  
+  @scope(.projects-done) {
+    :scope {
+      flex-wrap: nowrap;
+      gap: calc(var(--size) * 4)
+    }
+    
+    .item {
+      width: 50%;
+    }
+  }
+  
+  .myExperience {
+    column-count: 2;
+    column-gap: 2rem;
+  }
+  
+  h2 {
+    font-size: 1.5rem;
+    text-wrap: balance;
+  }
+
+  .working-me p {
+    width: 50ch;
+    font-size: 1em;
+    text-wrap: balance;
+  }
+  
+}
